<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:src="@drawable/app_logo_new" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtMobileNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:digits="0123456789"
                    android:drawableLeft="@drawable/vector_phone"
                    android:hint="@string/mobilehint"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/vector_paasword"
                    android:hint="@string/hintPassword"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="right"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right|center"

                    android:id="@+id/btnForgotPassword"
                    android:text="@string/btnForgotPassword"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_roundedrect"
                android:minHeight="50dp"
                android:id="@+id/btnLoginid"
                android:text="@string/btnLogin"
                android:textColor="@color/btnTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:id="@+id/btnRegister"
            android:minHeight="50dp"
            android:textColor="@color/btnTextColor"
            android:background="@drawable/btn_roundedrect_plain"
            android:text="@string/btnRegister"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>